[package]
name = "ics-watcher"
description = "A lightweight crate for monitoring ICS files or links and detecting changes, additions, and removals."
version = "0.1.2"
edition = "2021"
authors = ["OfficialBrot"]
repository = "https://github.com/OfficialFreak/ics-watcher"
license = "MIT OR Apache-2.0"
keywords = ["ics", "poll"]
categories = ["asynchronous", "api-bindings"]

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.0"
ciborium = "0.2.2"
dotenv = "0.15.0"
futures = "0.3.31"
google-calendar3 = "6.0.0"
http-body-util = "0.1.2"
ical = { version = "0.11.0", features = ["serde-derive"] }
once_cell = "1.20.2"
regex = "1.11.1"
reqwest = { version = "0.12.12" }
sanitize-filename = "0.6.0"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
